<resources>
    <string name="app_name">MyFitDays</string>
    <string name="textview">TextView</string>
    <string name="inserisci_le_tue_info">Inserisci le tue info:</string>
    <string name="nome">Nome:</string>
    <string name="cognome">Cognome:</string>
    <string name="sesso_f_m_a">Sesso (F,M,A,-):</string>
    <string name="data_di_nascita">Data di nascita:</string>
    <string name="peso_kg">Peso: kg</string>
    <string name="altezza_m">Altezza: m</string>
    <string name="gruppo_sanguigno">Gruppo sanguigno:</string>
    <string name="myfitdays">MyFitDays</string>
    <string name="storico_passi">Storico passi</string>
    <string name="myfitinfo">MyFitInfo</string>
    <string name="calorie_giornaliere">Calorie giornaliere</string>
    <string name="where_am_i">Where am I?</string>
    <string name="contapassi">Contapassi</string>
    <string name="steps_taken_0">Steps taken: 0</string>
</resources>