<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC107"
    android:backgroundTint="#FA842B"
    tools:context=".InfoActivity">

    <TextView
        android:id="@+id/titolo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:text="@string/inserisci_le_tue_info"
        android:textColor="#020202"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nome"
                android:textColor="#070707"
                android:textSize="20sp"
                tools:ignore="InefficientWeight" />

            <EditText
                android:id="@+id/nome"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:backgroundTint="#FBF6F6"
                android:ems="10"
                android:inputType="text|textPersonName"
                android:textSize="20sp"
                tools:ignore="LabelFor,SpeakableTextPresentCheck"
                android:importantForAutofill="no" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cognome"
                android:textColor="#070707"
                android:textSize="20sp"
                tools:ignore="InefficientWeight" />

            <EditText
                android:id="@+id/cognome"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:backgroundTint="#FBF6F6"
                android:ems="10"
                android:inputType="text|textPersonName"
                android:textSize="20sp"
                tools:ignore="LabelFor,SpeakableTextPresentCheck"
                android:importantForAutofill="no" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sesso_f_m_a"
                android:textColor="#070707"
                android:textSize="20sp"
                 />

            <EditText
                android:id="@+id/sesso"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="#FBF6F6"
                android:ems="10"
                android:inputType="text"
                android:textSize="20sp"
                tools:ignore="LabelFor,SpeakableTextPresentCheck"
                android:importantForAutofill="no" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/data_di_nascita"
                android:textColor="#070707"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/birthdate"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:backgroundTint="#F3EEEE"
                android:ems="10"
                android:inputType="datetime|date"
                android:textSize="20sp"
                tools:ignore="LabelFor,SpeakableTextPresentCheck"
                android:importantForAutofill="no" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/altezza_m"
                android:textColor="#070707"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/altezza"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:backgroundTint="#F3EEEE"
                android:ems="10"
                android:inputType="number|numberDecimal"
                android:textSize="20sp"
                tools:ignore="LabelFor,SpeakableTextPresentCheck"
                android:importantForAutofill="no" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/peso_kg"
                android:textColor="#070707"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/peso"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:backgroundTint="#F3EEEE"
                android:ems="10"
                android:inputType="number"
                android:textSize="20sp"
                tools:ignore="LabelFor,SpeakableTextPresentCheck"
                android:importantForAutofill="no" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gruppo_sanguigno"
                android:textColor="#090909"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/gsanguigno"
                android:layout_width="216dp"
                android:layout_height="50dp"
                android:backgroundTint="#F3EEEE"
                android:ems="10"
                android:inputType="text"
                android:textSize="20sp"
                tools:ignore="LabelFor,SpeakableTextPresentCheck"
                android:importantForAutofill="no" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>